--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,16 +19,8 @@ jobs:
       run: docker build . --file Dockerfile --tag testghdedzzdfg:123
   run_tests:
     needs: build
-    runs-on: [linux, self-hosted]
+    runs-on: ubuntu-latest
     steps:
     - name: Run Docker file
       run: |
-         sudo chmod 777 /var/run/docker.sock
-         sudo systemctl enable docker.service
-         sudo systemctl enable containerd.service
-         sudo apt-get -y install iptables-persistent -y
-         sudo iptables -L
-         sudo dockerd
-         #docker container ls -a
-         #docker run --help
-        # sudo docker run --privileged testghdedzzdfg:123 python3 main.py
+           sudo docker run testghdedzzdfg:123 python3 main.py
