--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,4 +23,4 @@ jobs:
     steps:
     - name: Run Docker file
       run: |
-           sudo docker run testghdedzzdfg:123 python3 main.py
+           docker run testghdedzzdfg:123 python3 main.py
